# Omnipresent

./: .gitignore  README.md  browser_cookies.py  config.py  downloader.py  main.py  pyproject.toml  ui_qt_widgets.py  utils.py  worker.py
core/: config.py  models.py  utils.py
services/: cookie_extractor.py  cookie_manager.py  cookie_worker.py  download_pool_manager.py  download_worker.py  single_download_worker.py  video_downloader.py
ui/: download_controller.py  main_window.py  splash_screen.py  ui_qt_widgets.py
